Use js to provide browser based back.
This also hides the back link by default and uses a javascript
handler to unhide it - this prevents a non-js enabled page load
from having an unusable back link.

--- a/app/views/includes/layout.html
+++ b/app/views/includes/layout.html
@@ -110,8 +110,9 @@
 html: (common.feedback + common.languageToggle) | replace("{smartSurveyFeedbackUrl}", globals.links.survey) | replace("{currentPageUrl}", pageUrl) | safe
     }) }}
 
+
     {% if previousUrl !== undefined and previousUrl.length > 0 %}
-    <a href="{{ previousUrl }}" class="govuk-back-link">{{ common.back | safe }}</a>
+    <span class="govuk-back-link govuk-visually-hidden" id="backLink">{{common.back }}</span>
     {% endif %}
 
 {% endblock %}
