--- a/app/views/includes/scripts.html
+++ b/app/views/includes/scripts.html
@@ -55,8 +55,11 @@
         });
       }
     });
+
+
 </script>
 <script src="/public/javascripts/document-upload.js?v=1.0"></script>
+<script src="/public/javascripts/go-back.js?v=1.1"></script>
 <!-- Dynatrace -->
 <script type="text/javascript" src="{{ globals.dynatrace.dynatraceUrl }}" crossorigin="anonymous"></script>
 <!-- End Dynatrace -->
