DTSPB-4523 Remove HMRC legacy journey

--- a/app/steps/ui/summary/includes/iht.njk
+++ b/app/steps/ui/summary/includes/iht.njk
@@ -106,7 +106,7 @@
     items = [
         {
             question: content.NewSubmittedToHmrc.question,
-            answer: content.NewSubmittedToHmrc[fields.iht.ihtFormEstateId.value],
+            answer: content.NewSubmittedToHmrc[fields.iht.estateValueCompleted.value],
             visible: fields.iht.estateValueCompleted.value and fields.summary.exceptedEstateDodAfterThreshold.value == "true" and fields.iht.estateValueCompleted.value == "optionYes" and fields.iht.ihtFormEstateId.value == 'optionIHT207'
         }
     ],
@@ -119,7 +119,7 @@
     items = [
         {
             question: content.NewSubmittedToHmrc.question,
-            answer: content.NewSubmittedToHmrc[fields.iht.ihtFormEstateId.value],
+            answer: content.NewSubmittedToHmrc[fields.iht.estateValueCompleted.value],
             visible: fields.iht.estateValueCompleted.value and fields.summary.exceptedEstateDodAfterThreshold.value == "true" and fields.iht.estateValueCompleted.value == "optionYes" and fields.iht.ihtFormEstateId.value == 'optionIHT400421'
         }
     ],
@@ -132,7 +132,7 @@
     items = [
         {
             question: content.NewSubmittedToHmrc.question,
-            answer: content.NewSubmittedToHmrc[fields.iht.ihtFormEstateId.value],
+            answer: content.NewSubmittedToHmrc[fields.iht.estateValueCompleted.value],
             visible: fields.iht.estateValueCompleted.value and fields.summary.exceptedEstateDodAfterThreshold.value == "true" and fields.iht.estateValueCompleted.value == "optionYes" and fields.iht.ihtFormEstateId.value == 'optionIHT400'
         }
     ],
