--- a/app/views/includes/help_details.html
+++ b/app/views/includes/help_details.html
@@ -11,6 +11,7 @@
       {% if fields.isWebChatEnabled.value === 'true' and fields.isAvayaWebChatEnabled.value === 'true' %}
         <p class="govuk-heading-s" id="avaya-web-chat-header"> {{ common.helpHeading3 | safe }} </p>
         {% include "includes/avaya-webchat.html" %}
+        {% include "includes/kerv-webchat.html" %}
       {% endif %}
       <p class="govuk-heading-s govuk-!-padding-top-2"> {{ common.helpHeading1 | safe }}</p>
       <p class="govuk-body"> {{ common.helpTelephoneNumber | safe }}</p>
