--- a/app/views/includes/help_details.html
+++ b/app/views/includes/help_details.html
@@ -10,8 +10,11 @@
     <div class="govuk-details__text">
       {% if fields.isWebChatEnabled.value === 'true' and fields.isAvayaWebChatEnabled.value === 'true' %}
         <p class="govuk-heading-s" id="avaya-web-chat-header"> {{ common.helpHeading3 | safe }} </p>
-        {% include "includes/avaya-webchat.html" %}
-        {% include "includes/kerv-webchat.html" %}
+        {% if fields.useNewWebChat === 'true' %}
+          {% include "includes/kerv-webchat.html" %}
+        {% else %}
+          {% include "includes/avaya-webchat.html" %}
+        {% endif %}
       {% endif %}
       <p class="govuk-heading-s govuk-!-padding-top-2"> {{ common.helpHeading1 | safe }}</p>
       <p class="govuk-body"> {{ common.helpTelephoneNumber | safe }}</p>
