--- a/app/views/includes/kerv-webchat.html
+++ b/app/views/includes/kerv-webchat.html
@@ -46,15 +46,15 @@
     const REFERRER_PAGE    = 'Divorce Site';
     {% if fields.language.value === 'en' %}
       <!-- english deployment id -->
-      const DEPLOYMENT_ID    = '3ccd9792-0530-4a2e-9e84-aaf8a59c0ef5';
+      const DEPLOYMENT_ID_    = '{{ globals.webchat.kerv.deployment_id.en }}';
     {% else %}
       <!-- welsh deployment id -->
-      const DEPLOYMENT_ID    = 'b7684a70-e39f-4ae7-b070-1e063060113e';
+      const DEPLOYMENT_ID    = '{{ globals.webchat.kerv.deployment_id.cy }}';
     {% endif %}
-    const GENESYS_BASE_URL = 'https://apps.euw2.pure.cloud';
-    const ENVIRONMENT      = 'prod-euw2';
-    const KERV_BASE_URL    = 'https://api.hmcts.hs-cx.com/web-availability';
-    const API_KEY          = 'ym6o8p96s32iYJ7p7uWlB4UlSgl576Ef7gg5DxJY';
+    const GENESYS_BASE_URL = '{{ globals.webchat.kerv.genesys_base_url }}';
+    const ENVIRONMENT     = '{{ globals.webchat.kerv.environment}}';
+    const KERV_BASE_URL    = '{{ globals.webchat.kerv.kerv_base_url }}';
+    const API_KEY          = '{{ globals.webchat.kerv.api_key }}';
 
     /* ---------------------------------------------------------------
        Open‑chat popup
