typo in deployment const.

--- a/app/views/includes/kerv-webchat.html
+++ b/app/views/includes/kerv-webchat.html
@@ -46,7 +46,7 @@
     const REFERRER_PAGE    = 'Divorce Site';
     {% if fields.language.value === 'en' %}
       <!-- english deployment id -->
-      const DEPLOYMENT_ID_    = '{{ globals.webchat.kerv.deploymentId.en }}';
+      const DEPLOYMENT_ID    = '{{ globals.webchat.kerv.deploymentId.en }}';
     {% else %}
       <!-- welsh deployment id -->
       const DEPLOYMENT_ID    = '{{ globals.webchat.kerv.deploymentId.cy }}';
