--- a/app/assets/sass/application-common.scss
+++ b/app/assets/sass/application-common.scss
@@ -97,3 +97,18 @@ a[href^="tel"] {
   }
 
 }
+
+.spinner {
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  border: 3px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #1d70b8;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+@keyframes spin {
+  to { transform: rotate(360deg); }
+}
