--- a/app/steps/ui/summary/includes/applicants.njk
+++ b/app/steps/ui/summary/includes/applicants.njk
@@ -1,7 +1,7 @@
 {{checkanswer(
     items = [
         {
-            question: content.RelationshipToDeceased.question,
+            question: fields.summary.relationshipToDeceasedQuestion.value,
             answer: content.RelationshipToDeceased[fields.applicant.relationshipToDeceased.value],
             visible: true
         }
