DTSPB-4689 Changed to use single field for both divorce/separated

--- a/app/steps/ui/summary/includes/deceased.njk
+++ b/app/steps/ui/summary/includes/deceased.njk
@@ -141,11 +141,17 @@
 {{checkanswer(
     items = [
         {
-            question: content.DivorcePlace.question,
+            question: fields.summary.deceasedDivorcePlaceQuestion.value,
             answer: content.DivorcePlace[fields.deceased.divorcePlace.value],
             visible:
                 fields.summary.caseType.value == "intestacy"
-                and fields.deceased.maritalStatus.value == "optionDivorced"
+                and
+                (
+                    fields.deceased.maritalStatus.value == "optionDivorced"
+                    or
+                    fields.deceased.maritalStatus.value == "optionSeparated"
+                )
+
         }
     ],
     url = content.DivorcePlace.url,
@@ -156,56 +162,32 @@
 {{checkanswer(
     items = [
         {
-            question: content.DivorceDate.question,
+            question: fields.summary.deceasedDivorceDateKnownQuestion.value,
             answer: content.DivorceDate[fields.deceased.divorceDateKnown.value],
-            visible: fields.summary.caseType.value == "intestacy"
-                 and fields.deceased.maritalStatus.value == "optionDivorced"
+            visible:
+                fields.summary.caseType.value == "intestacy"
+                and
+                (
+                    fields.deceased.maritalStatus.value == "optionDivorced"
+                    or
+                    fields.deceased.maritalStatus.value == "optionSeparated"
+                )
         },
         {
-            question: content.DivorceDate.date,
+            question: fields.summary.deceasedDivorceDate.value,
             answer: fields.deceased.divorceDate.value,
-            visible: fields.summary.caseType.value == "intestacy"
-                and fields.deceased.maritalStatus.value == "optionDivorced"
+            visible:
+                fields.summary.caseType.value == "intestacy"
+                and
+                (
+                    fields.deceased.maritalStatus.value == "optionDivorced"
+                    or
+                    fields.deceased.maritalStatus.value == "optionSeparated"
+                )
                 and fields.deceased.divorceDateKnown.value == 'optionYes'
         }
     ],
     url = content.DivorceDate.url,
-    common = common,
-    alreadyDeclared = fields.summary.alreadyDeclared.value
-)}}
-
-{{checkanswer(
-    items = [
-        {
-            question: content.SeparationPlace.question,
-            answer: content.SeparationPlace[fields.deceased.separationPlace.value],
-            visible:
-                fields.summary.caseType.value == "intestacy"
-                and fields.deceased.maritalStatus.value == "optionSeparated"
-        }
-    ],
-    url = content.SeparationPlace.url,
-    common = common,
-    alreadyDeclared = fields.summary.alreadyDeclared.value
-)}}
-
-{{checkanswer(
-    items = [
-        {
-            question: content.SeparationDate.question,
-            answer: content.SeparationDate[fields.deceased.separationDateKnown.value],
-            visible: fields.summary.caseType.value == "intestacy"
-                 and fields.deceased.maritalStatus.value == "optionSeparated"
-        },
-        {
-            question: content.SeparationDate.date,
-            answer: fields.deceased.separationDate.value,
-            visible: fields.summary.caseType.value == "intestacy"
-                and fields.deceased.maritalStatus.value == "optionSeparated"
-                and fields.deceased.separationDateKnown.value == 'optionYes'
-        }
-    ],
-    url = content.SeparationDate.url,
     common = common,
     alreadyDeclared = fields.summary.alreadyDeclared.value
 )}}
