DTSPB-4689 Fix deceased name in summary page

--- a/app/steps/ui/summary/includes/deceased.njk
+++ b/app/steps/ui/summary/includes/deceased.njk
@@ -102,7 +102,7 @@
 {{checkanswer(
     items = [
         {
-            question: content.DeceasedDob.question,
+            question: fields.summary.deceasedDobQuestion.value,
             answer: fields.deceased["dob-formattedDate"].value,
             visible: true
         }
@@ -115,7 +115,7 @@
 {{checkanswer(
     items = [
         {
-            question: content.DeceasedDod.question,
+            question: fields.summary.deceasedDodQuestion.value,
             answer: fields.deceased["dod-formattedDate"].value,
             visible: true
         }
