Dtspb 4523 hmrc remove legacy journey (#2616)
* DTSPB-4523 Remove HMRC legacy journey

* DTSPB-4523 Remove HMRC legacy journey

* DTSPB-4523 Changed Welsh text

* DTSPB-4523 Changed e2e

* DTSPB-4523 Content changes for excepted estate

* DTSPB-4523 Fix component test

* DTSPB-4523 Fix e2e

* DTSPB-4523 Added CTS to the hint text

* DTSPB-4523 changed net value content for IHT400

* DTSPB-4523 Fix issue

* DTSPB-4523 Fix issue on check your answers page

* DTSPB-4523 Fix test

* DTSPB-4523 Changed back link

* DTSPB-4523 Updated Welsh text

* DTSPB-4523 Updated Welsh error id

---------

Co-authored-by: Feli Tam <feli.tam@justice.gov.uk>

--- a/app/steps/ui/summary/includes/iht.njk
+++ b/app/steps/ui/summary/includes/iht.njk
@@ -79,7 +79,7 @@
 {{checkanswer(
     items = [
         {
-            question: content.DeceasedHadLateSpouseOrCivilPartner.question,
+            question: fields.summary.deceasedHadLateSpouseOrCivilPartnerQuestion.value,
             answer: content.DeceasedHadLateSpouseOrCivilPartner[fields.iht.deceasedHadLateSpouseOrCivilPartner.value],
             visible: fields.iht.deceasedHadLateSpouseOrCivilPartner.value and fields.summary.exceptedEstateDodAfterThreshold.value == "true" and fields.iht.estateValueCompleted.value == "optionNo" and fields.summary.withinNetQualifyingRange.value == "true"
         }
@@ -92,7 +92,7 @@
 {{checkanswer(
     items = [
         {
-            question: content.IhtUnusedAllowanceClaimed.question,
+            question: fields.summary.ihtUnusedAllowanceClaimedQuestion.value,
             answer: content.IhtUnusedAllowanceClaimed[fields.iht.unusedAllowanceClaimed.value],
             visible: fields.iht.unusedAllowanceClaimed.value and fields.summary.exceptedEstateDodAfterThreshold.value == "true" and fields.iht.estateValueCompleted.value == "optionNo" and fields.iht.deceasedHadLateSpouseOrCivilPartner.value == "optionYes" and fields.summary.withinNetQualifyingRange.value == "true"
         }
@@ -106,7 +106,7 @@
     items = [
         {
             question: content.NewSubmittedToHmrc.question,
-            answer: content.NewSubmittedToHmrc[fields.iht.ihtFormEstateId.value],
+            answer: content.NewSubmittedToHmrc[fields.iht.estateValueCompleted.value],
             visible: fields.iht.estateValueCompleted.value and fields.summary.exceptedEstateDodAfterThreshold.value == "true" and fields.iht.estateValueCompleted.value == "optionYes" and fields.iht.ihtFormEstateId.value == 'optionIHT207'
         }
     ],
@@ -119,7 +119,7 @@
     items = [
         {
             question: content.NewSubmittedToHmrc.question,
-            answer: content.NewSubmittedToHmrc[fields.iht.ihtFormEstateId.value],
+            answer: content.NewSubmittedToHmrc[fields.iht.estateValueCompleted.value],
             visible: fields.iht.estateValueCompleted.value and fields.summary.exceptedEstateDodAfterThreshold.value == "true" and fields.iht.estateValueCompleted.value == "optionYes" and fields.iht.ihtFormEstateId.value == 'optionIHT400421'
         }
     ],
@@ -132,7 +132,7 @@
     items = [
         {
             question: content.NewSubmittedToHmrc.question,
-            answer: content.NewSubmittedToHmrc[fields.iht.ihtFormEstateId.value],
+            answer: content.NewSubmittedToHmrc[fields.iht.estateValueCompleted.value],
             visible: fields.iht.estateValueCompleted.value and fields.summary.exceptedEstateDodAfterThreshold.value == "true" and fields.iht.estateValueCompleted.value == "optionYes" and fields.iht.ihtFormEstateId.value == 'optionIHT400'
         }
     ],
